// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="PasswordField-root custom"
>
  <div
    className="PasswordField-wrapper"
  >
    <input
      className="PasswordField-colorRegular PasswordField-input"
      defaultValue="Hello World"
      placeholder=""
      type="password"
    />
    <div
      className="PasswordField-icon"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Hide password"
    >
      <span
        aria-hidden="true"
        className="Icon-root Icon-sm"
      >
        visibility
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly 2`] = `
<div
  className="PasswordField-root custom"
>
  <div
    className="PasswordField-wrapper"
  >
    <input
      className="PasswordField-colorRegular PasswordField-input"
      defaultValue="Hello World"
      placeholder=""
      type="text"
    />
    <div
      className="PasswordField-icon"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Show password"
    >
      <span
        aria-hidden="true"
        className="Icon-root Icon-sm"
      >
        visibility_off
      </span>
    </div>
  </div>
</div>
`;
